Problem related to images and button alignment fixed

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,7 +25,7 @@ img{
 span{
     color: black;
     font-size:x-large;
-    font-weight: 700;   
+    font-weight: 600;   
 }
 
 .text{
@@ -41,12 +41,13 @@ span{
 }
 
 .about img{
-    padding: 0px 20px 0px 0px;
+    margin: 15px 10px 15px 0px;
     border-radius: 0px 25px 25px 0px ;
+    box-shadow: -5px 5px 5px #737373;
 }
 
 #origin img{
-    padding: 0px 0px 0px 10px;
+    margin: 15px 0px 15px 10px;
     border-radius: 25px 0px 0px 25px;
     box-shadow: 10px 5px 5px #737373;
 }
@@ -62,7 +63,7 @@ span{
     text-align: center;
     margin: 19% 4% 1% 0;
     padding:5px;
-    float: right;
+    float: left;
 }
 
 #we button:hover , #vision button:hover ,#origin button:hover{
@@ -80,24 +81,24 @@ span{
     }
 
     img{
-        width: 35%;
+        width: 45%;
     }
 
     #we , #origin , #vision{
         font-size: x-larger;
-        font-weight: 550;
+        font-weight: 420;
     }
 
     span{
         font-size:xx-large;
-        font-weight: 800;   
+        font-weight: 500;   
     }
 
-    #we button , #vision button{
-        margin: 5% 18% 4% 0;
+    #we button , #vision button , #origin button{
+        margin-top: 5% ;
     }
 
-    #origin button{
-        margin: 5% 8% 4% 0 ;
+    #para1, #para2 , #para3{
+        margin-top: 50px;
     }
 }
